--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
   "type": "module",
   "workspaces": [
     "src/frontend"
-  ]
+  ],
+  "dependencies": {
+    "@dfinity/auth-client": "^2.1.1"
+  }
 }
