--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@dfinity/auth-client": "^2.1.1",
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.0",
     "react-router-dom": "^6.26.2"
   }
