--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "^11.13.0",
     "@mui/icons-material": "^6.1.1",
     "@mui/material": "^6.1.0",
+    "@open-ic/openchat-xframe": "^1.0.6",
     "react-router-dom": "^6.26.2"
   }
 }
